--- a/package.json
+++ b/package.json
@@ -27,11 +27,15 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/mongoose": "^9.0.1",
+    "@nestjs/passport": "^8.0.1",
     "@nestjs/platform-express": "^8.0.0",
+    "@types/passport-local": "^1.0.34",
     "@types/uuid": "^8.3.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "mongoose": "^6.0.13",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0"
